--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -6,7 +6,7 @@
 
   .admin-users-title {
     font-size: 2rem;
-    color: $text-color;
+    color: black;
     text-align: center;
     margin-bottom: 20px;
     display: flex
