--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -8,7 +8,9 @@
     font-size: 2rem;
     color: black;
     text-align: center;
-    margin-bottom: 20px;
+    margin: 8px;
+    gap: 8px;
+
     display: flex
 
   }
