--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -11,23 +11,28 @@
     <h1>Utilisateurs</h1>
   </div>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Email</th>
-        <th>Created At</th>
-        <th>Updated At</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @users.each do |user| %>
+  <div class="admin-users-tabl">
+    <table>
+      <thead>
         <tr>
-          <td><%= user.email %></td>
-          <td><%= user.created_at %></td>
-          <td><%= user.updated_at %></td>
+          <th>Email</th>
+          <th>Created At</th>
+          <th>Updated At</th>
         </tr>
-      <% end %>
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td><%= user.email %></td>
+            <td><%= user.created_at %></td>
+            <td><%= user.updated_at %></td>
+          </tr>
+        <% end %>
     </tbody>
   </table>
+
+  </div>
+
+
 
 </div>
