--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -11,7 +11,7 @@
     <h1>Utilisateurs</h1>
   </div>
 
-  <div class="admin-users-tabl">
+  <div class="admin-users-table">
     <table>
       <thead>
         <tr>
