--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -11,14 +11,13 @@
     margin: 8px;
     gap: 8px;
 
-    display: flex
-
-  }
-
-  .admin-users-table {
+    display: flex;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 8px;
+
   }
+
 }
