--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -1,6 +1,7 @@
 // SCSS correspondiente a la paginad de visualizacon de usuarios
 
 .admin-users {
+  width: 100%;
   margin: 8px;
 
   .admin-users-title {
@@ -12,7 +13,6 @@
     justify-content: space-between;
     align-items: center;
     gap: 8px;
-    border: 1px solid black;
 
 
   }
