--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -1,7 +1,7 @@
 // SCSS correspondiente a la paginad de visualizacon de usuarios
 
 .admin-users {
-  width: 100%;
+  width: 100vh;
   margin: 8px;
 
   .admin-users-title {
