--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -1,8 +1,9 @@
 // SCSS correspondiente a la paginad de visualizacon de usuarios
 
 .admin-users {
-  width: 100vh;
-  margin: 8px;
+  width: 100%;
+  margin: 16px;
+  border: 1px solid black;
 
   .admin-users-title {
     font-size: 2rem;
