--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -11,9 +11,36 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
+
+  }
+
+  .admin-users-table {
     gap: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    margin-top: 16px;
 
+    .admin-users-table-header {
+      font-size: 1.5rem;
+      color: black;
+      margin-bottom: 8px;
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      align-items: center;
 
+    }
+
+    .admin-users-table-body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+    }
   }
 
 }
