--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -23,7 +23,7 @@
     width: 100%;
     margin-top: 16px;
 
-    .admin-users-table-header {
+    .admin-users-table {
       font-size: 1.5rem;
       color: black;
       margin-bottom: 8px;
@@ -31,6 +31,7 @@
       width: 100%;
       justify-content: space-between;
       align-items: center;
+      border: black solid 1px;
 
     }
 
