--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -24,6 +24,11 @@
     margin-top: 16px;
     border: 1px solid black;
 
+    thead {
+      background-color: #9a5f45;
+      color: white;
+      font-size: 1.2rem;
+    }
 
   }
 
