--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -31,6 +31,13 @@
       font-size: 1.2rem;
     }
 
+    tbody {
+      background-color: #f3d2c3;
+      width: 100%;
+      color: #e6b7a3;
+      font-size: 1.2rem;
+    }
+
   }
 
 }
