--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -34,7 +34,7 @@
     tbody {
       background-color: #f3d2c3;
       width: 100%;
-      color: #e6b7a3;
+      color: black;
       font-size: 1.2rem;
     }
 
