--- a/app/assets/stylesheets/pages/_admin_users.scss
+++ b/app/assets/stylesheets/pages/_admin_users.scss
@@ -24,19 +24,26 @@
     margin-top: 16px;
     border: 1px solid black;
 
-    thead {
-      background-color: #9a5f45;
+    table {
       width: 100%;
-      color: white;
-      font-size: 1.2rem;
+
+      thead {
+        background-color: #9a5f45;
+        width: 100%;
+        color: white;
+        font-size: 1.2rem;
+      }
+
+      tbody {
+        background-color: #f3d2c3;
+        width: 100%;
+        color: black;
+        font-size: 1.2rem;
+      }
+
     }
 
-    tbody {
-      background-color: #f3d2c3;
-      width: 100%;
-      color: black;
-      font-size: 1.2rem;
-    }
+
 
   }
 
