--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -32,7 +32,7 @@
     <div class="section-contenu">
       <h2>Gestion du Contenu</h2>
       <p>Gérez le contenu disponible sur la plateforme.</p>
-      <a href="/articles" class="btn btn-primary">Voir le Contenu</a>
+      <a href="/articles/index" class="btn btn-primary">Voir le Contenu</a>
     </div>
 
     <div class="section-statistiques">
