--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,6 +5,10 @@
 
   <%= render 'shared/header' %>
 
+  <div class="back-button">
+    <%= link_to 'Retour', request.referer || root_path, class: 'btn btn-secondary' %>
+  </div>
+
   <div class="articles-index-title">
     <div class="articles-index-title-card-A">
       <h1>Liste des Articles</h1>
