--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -36,8 +36,8 @@
     </div>
 
     <div class="section-statistiques">
-      <h2>Statistiques</h2>
-      <p>Consultez les statistiques et les métriques du système.</p>
+      <h2>Commandes</h2>
+      <p>Consultez les Commandes.</p>
       <a href="/admin/stats" class="btn btn-primary">Voir les Statistiques</a>
     </div>
   </div>
