--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -24,7 +24,7 @@
     <thead>
 
       <tr>
-        <th>Nom</th>
+        <th>Picture</th>
         <th>Description</th>
         <th>Prix</th>
         <th>Stock</th>
