--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -25,7 +25,7 @@
 
       <tr>
         <th>Picture</th>
-        <th>Description</th>
+        <th>Name</th>
         <th>Prix</th>
         <th>Stock</th>
         <th>Catégorie</th>
