--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -26,8 +26,8 @@
       <tr>
         <th>Picture</th>
         <th>Name</th>
-        <th>Prix</th>
-        <th>Stock</th>
+        <th>Description</th>
+        <th>Price</th>
         <th>Catégorie</th>
         <th>Actions</th>
       </tr>
