--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,5 @@
 <%# HTML correspondiente al index de articulos %>
+<%# HTML listo %>
 <%= render "shared/navbar" %>
 
 <div class="articles-index-container">
@@ -17,7 +18,6 @@
       <%= link_to '+ Nouvel Article', new_article_path, class: 'btn btn-primary ' %>
     </div>
   </div>
-
 
   <table class="table">
 
