--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <%# HTML correspondiente al index de articulos %>
-<%# HTML listo %>
+<%# Ultima actualizacion 25May25 %>
 <%= render "shared/navbar" %>
 
 <div class="articles-index-container">
