--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,8 +2,10 @@
 <%# Ultima actualizacion 25May25 %>
 <%= render "shared/navbar" %>
 
+<%# Este archivo es el index de articulos %>
 <div class="articles-index-container">
 
+<%# Header correspondiente al titulo de la pagina %>
   <%= render 'shared/header' %>
 
   <div class="back-button">
