--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,10 +8,12 @@
 <%# Header correspondiente al titulo de la pagina %>
   <%= render 'shared/header' %>
 
+  <%# boton para ir hacia atras %>
   <div class="back-button">
     <%= link_to 'Retour', request.referer || root_path, class: 'btn btn-secondary' %>
   </div>
 
+  <%#  %>
   <div class="articles-index-title">
     <div class="articles-index-title-card-A">
       <h1>Liste des Articles</h1>
