--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,6 @@
 <%# HTML correspondiente al edit de artículos %>
+<%# Ultima actualizacion 25May25 %>
+
 <%= render "shared/navbar" %>
 
 <div class="articles-edit-container">
