--- a/app/assets/stylesheets/pages/_articles_edit.scss
+++ b/app/assets/stylesheets/pages/_articles_edit.scss
@@ -1,3 +1,6 @@
+// SCSS correspondiente a articles container
+// ultima actializacion 25May25
+
 .articles-edit-container {
   background-color: white;
   padding: 8px;
