--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,2 +1,5 @@
+<%# HTML correspondiente a admin/edit %>
+<%# Ultima actualizacion 25May25 %>
+
 <h1>Admin::Users#edit</h1>
 <p>Find me in app/views/admin/users/edit.html.erb</p>
