--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,4 +1,5 @@
 <%# HTML correspondietne a la vision de utilizadores por parte del administrador %>
+<%# Ultima actualizacion 25May25 %>
 
 <%= render "shared/navbar" %>
 
