--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,6 @@
 <%# HTML correspondiente al new de artículos %>
+<%# Ultima actualizacion 25May25 %>
+
 <%= render "shared/navbar" %>
 
 <div class="articles-index-container">
