--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,6 @@
 <%# HTML correspondiente a la vista de un artículo (show) %>
+<%# HTML ultima actualizacion 25May25 %>
+
 <%= render "shared/navbar" %>
 
 <div class="articles-show-container">
