--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,8 +1,10 @@
 <%# HTML correspondiente a la vista de un artículo (show) %>
 <%# HTML ultima actualizacion 25May25 %>
 
+<%# Barra de navegacion general %>
 <%= render "shared/navbar" %>
 
+<%# Contenedor general %>
 <div class="articles-show-container">
 
   <%= render 'shared/header' %>
