--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -1,5 +1,7 @@
 <%# HTML correspondiente a la pagina del administrador %>
+<%# Ultima actualizacion 25May25 %>
 
+<%# Barra de navegacion %>
 <%= render "shared/navbar" %>
 
 <%= render 'shared/header' %>
