--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -4,6 +4,7 @@
 <%# Barra de navegacion %>
 <%= render "shared/navbar" %>
 
+<%# Header general %>
 <%= render 'shared/header' %>
 
 <div class="admin-dashboard">
