--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -7,6 +7,7 @@
 <%# Header general %>
 <%= render 'shared/header' %>
 
+<%# Division general %>
 <div class="admin-dashboard">
   <div class="admin-dashboard-title-card-A">
 
