--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -11,10 +11,13 @@
 <div class="admin-dashboard">
   <div class="admin-dashboard-title-card-A">
 
+    <%# titulo %>
     <div class="admin-dashboard-title">
       <h1>Bienvenue Sandrine</h1>
     </div>
 
+
+    <%# Infor %>
     <div class="admin-dashboard-information">
       <h2>Informations du Washington</h2>
         <p>Ici, vous trouverez votre tableau
