--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -17,7 +17,7 @@
     </div>
 
 
-    <%# Infor %>
+    <%# Informacion %>
     <div class="admin-dashboard-information">
       <h2>Informations du Washington</h2>
         <p>Ici, vous trouverez votre tableau
@@ -30,6 +30,7 @@
         </p>
     </div>
   </div>
+
 
   <div class="dashboard-sections">
     <div class="section-utilisateur">
