--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <%# HTML correspondiente a home %>
 <%# Ultima actualizacion 25May25 %>
 
+<%# Division general contenedora %>
 <div class="home-container">
 
   <%= render "shared/navbar" %>
