--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,18 +4,25 @@
 <%# Division general contenedora %>
 <div class="home-container">
 
+  <%# Barra de navegacion general %>
   <%= render "shared/navbar" %>
 
+  <%# Header general %>
   <%= render 'shared/header' %>
 
+  <%# Main general %>
   <%= render 'shared/main' %>
 
+  <%# Cartas de creacion %>
   <%= render 'shared/creations_cards' %>
 
+  <%# home intro %>
   <%= render 'shared/home_intro' %>
 
+  <%# Postal cards %>
   <%= render 'shared/postal_cards' %>
 
+  <%# Business cards %>
   <%= render 'shared/business_cards' %>
 
 </div>
