--- a/app/views/shared/_business_cards.html.erb
+++ b/app/views/shared/_business_cards.html.erb
@@ -1,8 +1,11 @@
 <%# !-- Agregar Google Fonts --> %>
+<%# Ultima actualizacion 25May25 %>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 
+<%# Division general %>
 <div class="business-card-container">
   <div class="business-cards">
     <div class="business-card-wp">
