--- a/app/views/shared/_business_cards.html.erb
+++ b/app/views/shared/_business_cards.html.erb
@@ -8,6 +8,7 @@
 <%# Division general %>
 <div class="business-card-container">
   <div class="business-cards">
+    <%# carta de whatsapp %>
     <div class="business-card-wp">
       <h2>L'art et la matière</h2>
       <section class="button-wp">
@@ -16,12 +17,12 @@
         </a>
       </section>
     </div>
-
+    <%# carta de livraison %>
     <div class="business-card-livraison">
       <p>Livraison à partir de 3,30€ pour les stickers et cartes postales</p>
       <p>Livraison offerte à partir de 60€</p>
     </div>
-
+    <%# carta de redes sociales %>
     <div class="business-card-social-media">
       <h2 class="dancing-script">Suivez-moi sur nos réseaux sociaux</h2>
       <section class="business-card-social-media-buttons">
