--- a/app/views/shared/_creations_cards.html.erb
+++ b/app/views/shared/_creations_cards.html.erb
@@ -1,8 +1,10 @@
 <%# HTML correspondiente a cration card %>
 <%# Ultima actualizacion 25May25 %>
 
+<%# Division general %>
 <div class="creations-card-container">
 
+  <%# Titulo %>
   <section class="creation-card-title">
     <h2>Les nouvelles creations...</h2>
   </section>
