--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,9 +1,11 @@
 <%# HTML correspondiente al header %>
 <%# Ultima actualizacion 25May25 %>
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
 
+<%# Division general %>
 <header class="header">
   <div class="header-card-left">
     <img src="https://res.cloudinary.com/dcfmvazgl/image/upload/v1742556817/new-logo_sqtb8o.jpg" alt="logo de l'art et la matiere">
