--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,9 +7,13 @@
 
 <%# Division general %>
 <header class="header">
+
+  <%# carta de izquierda %>
   <div class="header-card-left">
     <img src="https://res.cloudinary.com/dcfmvazgl/image/upload/v1742556817/new-logo_sqtb8o.jpg" alt="logo de l'art et la matiere">
   </div>
+
+  <%# carta de derecha %>
   <div class="header-card-right">
     <a href="../home">
       <h1>L'art et la matiere</h1>
