--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -1,4 +1,5 @@
 <%# HTML correspondiente al main %>
+<%# Ultima actualizacion 25May25 %>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
