--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -7,6 +7,7 @@
 <%# Division general %>
 <main class="main">
 
+  <%# Seccion de botones %>
   <div class="main-card-buttons">
     <a href="">• Verre</a>
     <a href="">• Carton</a>
