--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -16,7 +16,7 @@
     <a href="">• Fils</a>
   </div>
 
-
+  <%# imagenes %>
   <div class="main-card-container">
     <div class="main-card-left">
       <a href="">
