--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,5 @@
 <%# HTML correspondiente a la navbar %>
+<%# Ultima actualizacion 25May25 %>
 
 <nav class="navbar">
   <div class="navbar-left-card">
