--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,13 +1,17 @@
 <%# HTML correspondiente a la navbar %>
 <%# Ultima actualizacion 25May25 %>
 
+<%# Contenedor general %>
 <nav class="navbar">
+
+  <%# barra de izquierda %>
   <div class="navbar-left-card">
     <%# <h2>Livraison offerte des 65€ | Paiment securise </h2> %>
     <a href="">Présentation</a>
     <a href="">Contact</a>
   </div>
 
+  <%# barra de la derecha %>
   <div class="navbar-right-card">
     <a href="https://www.instagram.com/lart_et_la_matiere1/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
 
