--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,6 +36,7 @@
   </div>
 </nav>
 
+<%# estilo del menu dropdown %>
 <style>
   .user-menu-container {
     position: relative;
@@ -71,6 +72,7 @@
   }
 </style>
 
+<%# JavaScript del menu dropdown %>
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     const userMenuButton = document.getElementById('userMenuButton');
