--- a/app/views/shared/_postal_cards.html.erb
+++ b/app/views/shared/_postal_cards.html.erb
@@ -1,5 +1,7 @@
 <%# HTML correspondiente a postal cards %>
+<%# Ultima actualizacion 25May25 %>
 
+<%# Contenedor general %>
 <div class="postal-container">
 
   <section class="postal-cards-container">
