--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,7 @@
 @import "pages/articles_new";
 @import "pages/articles_edit";
 @import "pages/articles_show";
+@import "pages/articles_category_show";
 
 // users
 @import "pages/users_show";
