--- a/app/views/articles/carton.html.erb
+++ b/app/views/articles/carton.html.erb
@@ -1,7 +1,5 @@
-<%# HTML correspondiente a Verre %>
-
 <div class="articles-category-container">
-  <h1>Articles en Verre</h1>
+  <h1>Articles en Carton</h1>
   <div class="article-list">
     <% @articles.each do |article| %>
       <div class="article-card">
