--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -10,7 +10,7 @@
   <%# Seccion de botones %>
   <div class="main-card-buttons">
     <a href="../articles/verre.html.erb">• Verre</a>
-    <a href="">• Carton</a>
+    <a href="../articles/carton.html.erb">• Carton</a>
     <a href="">• Papier de soie</a>
     <a href="">• Papier mâché</a>
     <a href="">• Fils</a>
