--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -11,7 +11,7 @@
   <div class="main-card-buttons">
     <a href="../articles/verre.html.erb">• Verre</a>
     <a href="../articles/carton.html.erb">• Carton</a>
-    <a href="">• Papier de soie</a>
+    <a href="../articles/papier_de_soie.html.erb">• Papier de soie</a>
     <a href="">• Papier mâché</a>
     <a href="">• Fils</a>
   </div>
