--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -13,7 +13,7 @@
     <a href="../articles/carton.html.erb">• Carton</a>
     <a href="../articles/papier_de_soie.html.erb">• Papier de soie</a>
     <a href="../articles/papier_mache.html.erb">• Papier mâché</a>
-    <a href="">• Fils</a>
+    <a href="../articles/fils.html.erb">• Fils</a>
   </div>
 
   <%# imagenes %>
