--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -9,11 +9,11 @@
 
   <%# Seccion de botones %>
   <div class="main-card-buttons">
-    <a href="../articles/verre.html.erb">• Verre</a>
-    <a href="../articles/carton.html.erb">• Carton</a>
-    <a href="../articles/papier_de_soie.html.erb">• Papier de soie</a>
-    <a href="../articles/papier_mache.html.erb">• Papier mâché</a>
-    <a href="../articles/fils.html.erb">• Fils</a>
+    <a href="../articles/verre">• Verre</a>
+    <a href="../articles/carton">• Carton</a>
+    <a href="../articles/papier_de_soie">• Papier de soie</a>
+    <a href="../articles/papier_mache">• Papier mâché</a>
+    <a href="../articles/fils">• Fils</a>
   </div>
 
   <%# imagenes %>
