--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -9,7 +9,7 @@
 
   <%# Seccion de botones %>
   <div class="main-card-buttons">
-    <a href="../articles/verre">• Verre</a>
+    <%= link_to '• Verre', article_path('verre') %>
     <a href="../articles/carton">• Carton</a>
     <a href="../articles/papier_de_soie">• Papier de soie</a>
     <a href="../articles/papier_mache">• Papier mâché</a>
