--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -9,11 +9,11 @@
 
   <%# Seccion de botones %>
   <div class="main-card-buttons">
-    <%= link_to '• Verre', article_path('verre') %>
-    <a href="../articles/carton">• Carton</a>
-    <a href="../articles/papier_de_soie">• Papier de soie</a>
-    <a href="../articles/papier_mache">• Papier mâché</a>
-    <a href="../articles/fils">• Fils</a>
+    <%= link_to '• Verre', category_articles_path('verre') %>
+    <%= link_to '• Carton', category_articles_path('carton') %>
+    <%= link_to '• Papier de soie', category_articles_path('papier_de_soie') %>
+    <%= link_to '• Papier mâché', category_articles_path('papier_mache') %>
+    <%= link_to '• Fils', category_articles_path('fils') %>
   </div>
 
   <%# imagenes %>
