--- a/app/views/shared/_main.html.erb
+++ b/app/views/shared/_main.html.erb
@@ -9,7 +9,7 @@
 
   <%# Seccion de botones %>
   <div class="main-card-buttons">
-    <a href="../verre">Verre</a>
+    <%= link_to "Verre", category_articles_path("verre") %>
     <%= link_to '• Carton', category_articles_path('carton') %>
     <%= link_to '• Papier de soie', category_articles_path('papier_de_soie') %>
     <%= link_to '• Papier mâché', category_articles_path('papier_mache') %>
