--- a/app/views/articles/verre.html.erb
+++ b/app/views/articles/verre.html.erb
@@ -1,4 +1,7 @@
 <%# Vista mejorada para la categoría Verre con cartas de presentación de productos %>
+<%# Ultima actualizacion 02Jul25 %>
+
+<%= render "shared/navbar" %>
 
 <div class="articles-category-container">
   <h1>Articles en Verre</h1>
