--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,7 @@
 <%# HTML correspondiente al index de articulos %>
 <%# Ultima actualizacion 25May25 %>
 
+<%# navbar general %>
 <%= render "shared/navbar" %>
 
 <%# Este archivo es el index de articulos %>
