--- a/app/views/articles/verre.html.erb
+++ b/app/views/articles/verre.html.erb
@@ -1,7 +1,11 @@
 <%# Vista mejorada para la categoría Verre con cartas de presentación de productos %>
 <%# Ultima actualizacion 02Jul25 %>
 
+<%# navbar general %>
 <%= render "shared/navbar" %>
+
+<%# Este archivo es el index de articulos %>
+<div class="articles-index-container">
 
 <div class="articles-category-container">
   <h1>Articles en Verre</h1>
