--- a/app/views/articles/verre.html.erb
+++ b/app/views/articles/verre.html.erb
@@ -4,8 +4,9 @@
 <%# navbar general %>
 <%= render "shared/navbar" %>
 
-<%# Este archivo es el index de articulos %>
-<div class="articles-index-container">
+<%# Header general %>
+<%= render 'shared/header' %>
+
 
 <div class="articles-category-container">
   <h1>Articles en Verre</h1>
