--- a/app/views/articles/verre.html.erb
+++ b/app/views/articles/verre.html.erb
@@ -7,6 +7,10 @@
 <%# Header general %>
 <%= render 'shared/header' %>
 
+<%# Main general %>
+
+<%= render 'shared/main' %>
+
 
 <div class="articles-category-container">
   <h1>Articles en Verre</h1>
