--- a/app/views/articles/verre.html.erb
+++ b/app/views/articles/verre.html.erb
@@ -9,7 +9,13 @@
 
 <%# Main general %>
 
-<%= render 'shared/main' %>
+<div class="main-card-buttons">
+  <%= link_to "Verre", category_articles_path("verre") %>
+  <%= link_to '• Carton', category_articles_path('carton') %>
+  <%= link_to '• Papier de soie', category_articles_path('papier_de_soie') %>
+  <%= link_to '• Papier mâché', category_articles_path('papier_mache') %>
+  <%= link_to '• Fils', category_articles_path('fils') %>
+</div>
 
 
 <div class="articles-category-container">
