--- a/app/assets/stylesheets/pages/_articles_category_show.scss
+++ b/app/assets/stylesheets/pages/_articles_category_show.scss
@@ -1,6 +1,7 @@
 // SCSS correspondiente a article category show
 .main-card-buttons {
   height: 10vh;
+  width: 90%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
