--- a/app/assets/stylesheets/pages/_articles_category_show.scss
+++ b/app/assets/stylesheets/pages/_articles_category_show.scss
@@ -2,6 +2,7 @@
 .main-card-buttons {
   height: 10vh;
   width: 90%;
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
