--- a/app/assets/stylesheets/components/_creations_cards.scss
+++ b/app/assets/stylesheets/components/_creations_cards.scss
@@ -77,7 +77,7 @@
       }
 
       // boton posee 15% del tamaño de la tarjeta
-      .creation-card-button .btn {
+      .creation-card-button {
         height: 10%;
         display: flex;
         justify-content: center;
