--- a/app/assets/stylesheets/components/_creations_cards.scss
+++ b/app/assets/stylesheets/components/_creations_cards.scss
@@ -84,7 +84,7 @@
         align-items: center;
         padding: 10px 0; // Añadí padding para evitar que el botón se encoja demasiado
 
-        button {
+        .btn {
           background-color: #9a5f45;
           color: #ffffff;
           border: none;
