--- a/app/assets/stylesheets/components/_creations_cards.scss
+++ b/app/assets/stylesheets/components/_creations_cards.scss
@@ -84,6 +84,18 @@
         align-items: center;
         padding: 10px 0; // Añadí padding para evitar que el botón se encoja demasiado
 
+        button {
+          background-color: #9a5f45;
+          color: #ffffff;
+          border: none;
+          padding: 8px 16px;
+          border-radius: 4px;
+          cursor: pointer;
+          width: 80%; // Ajuste para que el botón mantenga buen tamaño
+          max-width: 200px;
+          font-size: 1vw;
+        }
+
         .btn {
           background-color: #9a5f45;
           color: #ffffff;
@@ -94,6 +106,7 @@
           width: 80%; // Ajuste para que el botón mantenga buen tamaño
           max-width: 200px;
           font-size: 1vw;
+
         }
       }
     }
