--- a/app/views/articles/verre.html.erb
+++ b/app/views/articles/verre.html.erb
@@ -45,6 +45,9 @@
           <%= link_to "Voir l'article", article_path(article), class: "btn" %>
         </div>
 
+        <%# Business cards %>
+        <%= render 'shared/business_cards' %>
+
       </div>
     <% end %>
   </div>
