--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -35,10 +35,13 @@
         <p><strong>Catégorie :</strong> <%= @article.category %></p>
         <p><strong>Description :</strong> <%= @article.description %></p>
       </div>
-      <div class="articles-show-actions">
-        <%= link_to 'Éditer', edit_article_path(@article), class: 'btn btn-warning' %>
-        <%= button_to 'Supprimer', article_path(@article), method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cet article ?' }, class: 'btn btn-danger' %>
-      </div>
+
+      <% if current_user&.admin? %>
+        <div class="articles-show-actions">
+          <%= link_to 'Éditer', edit_article_path(@article), class: 'btn btn-warning' %>
+          <%= button_to 'Supprimer', article_path(@article), method: :delete, data: { confirm: 'Êtes-vous sûr de vouloir supprimer cet article ?' }, class: 'btn btn-danger' %>
+        </div>
+      <% end %>
 
     </div>
 
