--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,6 +4,9 @@
 <%# Barra de navegacion general %>
 <%= render "shared/navbar" %>
 
+<%# Main general %>
+<%= render 'shared/main' %>
+
 <%# Contenedor general %>
 <div class="articles-show-container">
 
