--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -11,16 +11,16 @@
     margin: 0 32px;
     margin-bottom: 20px;
 
-    .articles-show-title-card-A {
+    // .articles-show-title-card-A {
 
-      h1 {
-        color: #9a5f45;
-      }
-      font-size: 48px;
-      font-family: "Dancing Script", serif;
-      font-weight: 600;
+    //   h1 {
+    //     color: #9a5f45;
+    //   }
+    //   font-size: 48px;
+    //   font-family: "Dancing Script", serif;
+    //   font-weight: 600;
 
-    }
+    // }
 
     .articles-show-title-card-B {
       .btn {
