--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -5,6 +5,7 @@
   padding: 8px;
 
   .articles-show-title {
+    border: 1px solid black;
     display: flex;
     justify-content: space-between;
     align-items: center;
