--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -13,6 +13,8 @@
     margin-bottom: 20px;
 
     .articles-show-title-card-B {
+          border: 1px solid black;
+
       .btn {
         font-size: 16px;
         padding: 8px 16px;
