--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -13,7 +13,8 @@
     margin-bottom: 20px;
 
     .articles-show-title-card-B {
-          border: 1px solid black;
+      border: 1px solid black;
+      width: 100%;
 
       .btn {
         font-size: 16px;
