--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -15,6 +15,9 @@
     .articles-show-title-card-B {
       border: 1px solid black;
       width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
 
       .btn {
         font-size: 16px;
