--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -12,18 +12,18 @@
     margin: 0 32px;
     margin-bottom: 20px;
 
-    .articles-show-title-card-B {
-      border: 1px solid black;
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    // .articles-show-title-card-B {
+    //   border: 1px solid black;
+    //   width: 100%;
+    //   display: flex;
+    //   justify-content: space-between;
+    //   align-items: center;
 
-      .btn {
-        font-size: 16px;
-        padding: 8px 16px;
-      }
-    }
+    //   .btn {
+    //     font-size: 16px;
+    //     padding: 8px 16px;
+    //   }
+    // }
   }
 
   .articles-show-content {
