--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -7,7 +7,7 @@
   .articles-show-title {
     border: 1px solid black;
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
     align-items: center;
     margin: 0 32px;
     margin-bottom: 20px;
