--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: right;
     align-items: center;
-    margin: 0 32px;
+    margin: 32px;
     margin-bottom: 20px;
 
   }
