--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -23,6 +23,7 @@
 
     .articles-show-image {
       border: 1px solid black;
+      padding: 16px;
       box-shadow: 4px 8px 16px 8px rgba(0, 0, 0, 0.1);
 
 
