--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -34,6 +34,7 @@
     }
 
     .articles-show-details {
+      box-shadow: 4px 8px 16px 8px rgba(0, 0, 0, 0.1);
       display: flex;
       flex-direction: column;
 
