--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -3,6 +3,7 @@
 .articles-show-container {
   background-color: white;
   padding: 8px;
+  border: 1px solid black;
 
   .articles-show-title {
     display: flex;
