--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -19,10 +19,11 @@
     align-items: center;
     padding: 16px;
     gap: 20px;
-      border: 1px solid black;
+    border: 1px solid black;
 
 
     .articles-show-image {
+      border: 1px solid red ;
       box-shadow: 4px 8px 16px 8px rgba(0, 0, 0, 0.1);
       padding: 16px;
 
