--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -36,6 +36,8 @@
     .articles-show-details {
       border: 1px solid blue;
       box-shadow: 4px 8px 16px 8px rgba(0, 0, 0, 0.1);
+      height: 100%;
+      width: 100%;
       padding: 16px;
       display: flex;
       flex-direction: column;
