--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -30,6 +30,8 @@
   </div>
 
   <div class="articles-show-content">
+    <span class="card-A"></span>
+
     <div class="articles-show-image">
       <%= image_tag @article.image_url if @article.image_url.present? %>
     </div>
