--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -40,7 +40,8 @@
 
     .card-B {
       border: 1px solid red;
-      height: 100%;
+      margin: 0;
+      height: auto;
       width: 70%;
 
       .articles-show-details {
