--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -41,7 +41,7 @@
     .card-B {
       border: 1px solid red;
       margin: 0;
-      height: auto;
+      height: 71vh;
       width: 70%;
 
       .articles-show-details {
