--- a/app/assets/stylesheets/pages/_articles_show.scss
+++ b/app/assets/stylesheets/pages/_articles_show.scss
@@ -23,6 +23,9 @@
     .card-A {
       height: 100%;
       width: 30%;
+      align-items: center;
+      justify-content: center;
+      display: flex;
 
       .articles-show-image {
         box-shadow: 4px 8px 16px 8px rgba(0, 0, 0, 0.1);
